--- a/HTML CSS JS/HTML + CSS/06_practice/Task2.css
+++ b/HTML CSS JS/HTML + CSS/06_practice/Task2.css
@@ -1,53 +1,62 @@
+body { 
+    margin: 0px;
+    color: white;
+    font-size: 17px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
 nav {
     /* width: 244px; */
     background-color: #808080;
     display: inline-block;
-    height: 950px;
+    height: 100%;
     position: fixed;
+    width: 70px;
+    transition: width 1s ease;
+}
+nav:hover {
+    width: 250px;
+}
+nav li {
+    display: block;
+    padding: 20px;
+    font-size: 18px;
+    padding-left: 0;
+    padding-bottom: 0;
 }
 nav li:hover {
     background-color: #5E5E5E;
     cursor: pointer;
     transition: all .3s;
 }
-.edit {
-    background-image: url(../resources/edit.png);
-}
-.favorites {
-    background-image: url(../resources/favorites.png);
-}
-.history {
-    background-image: url(../resources/history.png);
-}
-.security {
-    background-image: url(../resources/security.png);
-}
-.settings {
-    background-image: url(../resources/settings.png);
+nav li a {
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    margin: 0;
+    white-space: nowrap;
 }
 ul {
     list-style-type: none;
     padding: 0px;
 }
-ul li {
-    background-size: 65px;
-    background-repeat: no-repeat;
-    background-position: left;
-    padding: 36px 90px 36px 80px;
+img {
+    height: 70px;
+    vertical-align: middle;
 }
-body { 
-    margin: 0px;
-    color: white;
-    font-size: 17px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+span {
+    padding-left: 10px;
+    font-size: 20px;
 }
-.menu-span{
-    padding: 30px 20px;
-    font-size: 17px;
-}
-h1, p {
+h2,p {
+    margin: 0;
     color: black;
-    margin: auto;
-    margin-left: 300px;
+    padding-left: 150px;
     text-transform: uppercase;
+}
+h2 {
+    padding-top: 50px;
+}
+p {
+    padding-top: 20px;
 }
