--- a/HTML CSS JS/HTML + CSS/08_practice/LoginPage.css
+++ b/HTML CSS JS/HTML + CSS/08_practice/LoginPage.css
@@ -1,7 +1,7 @@
 body {
     background-color: #E45D44;
     max-width: 30%;
-    margin: 80px auto;
+    margin: auto;
     font-family: Arial, Helvetica, sans-serif;
 }
 .login-form {
@@ -16,7 +16,7 @@ h2 {
     text-align: center;
 }
 .login-form input {
-    flex-grow: 1;
+    /* flex-grow: 1; */
     border: none;
     text-align: center;
     height: 35px;
@@ -76,4 +76,10 @@ p {
 .last-buttons img {
     padding-right: 7px;
     vertical-align: middle;
+}
+.main-div {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
 }
