--- a/HTML CSS JS/HTML + CSS/08_practice/Flights-List.css
+++ b/HTML CSS JS/HTML + CSS/08_practice/Flights-List.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    background-color: #F5F5F5;
 }
 header {
     padding: 20px;
@@ -14,3 +15,86 @@ a {
     text-decoration: none;
     color: white;
 }
+header nav {
+    margin-left: 60px;
+}
+header div {
+    margin-right: 60px;
+}
+.flight-block {
+    margin-left: 60px;
+    margin-right: 60px;
+}
+.flight-block .radio-type {
+    margin-top: 25px;
+    margin-bottom: 10px;
+}
+.type-form {
+    display: flex;
+    gap: 10px;
+    justify-content: space-around;
+}
+.type-form input,
+select {
+    height: auto;
+    width: 100%;
+    border-radius: 5px;
+    background-color: white;
+    border: 1px solid lightgray;
+    color: gray;
+}
+.type-form input::placeholder {
+    color: gray;
+}
+#search-button {
+    height: 35px;
+    border-radius: 5px;
+    border: none;
+    background-color: #0F4371;
+    color: white;
+}
+#depart-input,
+#return-input {
+    background-image: url(../resources/Solid_black.png);
+    background-repeat: no-repeat;
+    /* background-size: auto 90%; */
+    background-position: 95%;
+    background-size: 25px;
+}
+#from-input,
+#to-input {
+    background-image: url(../resources/gps.png);
+    background-size: 10px;
+    background-repeat: no-repeat;
+    background-position: 95%;
+}
+.main-div {
+    margin-top: 50px;
+    display: grid;
+    /* background-color: red; */
+    grid-template-columns: 1fr 2fr;
+    gap: 50px;
+}
+.form-filter {
+    /* gap: 10px; */
+    display: flex;
+    background-color: #FFFFFF;
+    border-radius: 6px ;
+    box-shadow: 0px 0px 15px -7px #000000;
+    flex-direction: column;
+    padding: 25px;
+    width: auto;
+}
+.main-div .form-filter p {
+    color: #0F4371;
+    font-weight: bold;
+}
+.dehli_sydney {
+    display: flex;
+    background-color: #FFFFFF;
+    border-radius: 6px ;
+    box-shadow: 0px 0px 15px -7px #000000;
+}
+/* .main-div .dehli_sydney .dehli-first-div {
+    display: flex;
+} */
